--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -118,11 +118,11 @@
                 
                 
                 <div id ="img">
-                    <img src = "1.png" id="button-img" type="button" class="button-img" onclick="img()">
+                    <img src = "webapp/templates/1.png" id="button-img" type="button" class="button-img" onclick="img()">
                 </div>
                 
                 <div id ="gif" style="display:none;">
-                    <img src="2.gif"id="button-img" type="button" class="button-imag" onclick="genFortune()">
+                    <img src="webapp/templates/2.gif" id="button-img" type="button" class="button-imag" onclick="genFortune()">
                 </div>
             </div>   </div>
     <script type="text/javascript">
