--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -118,11 +118,11 @@
                 
                 
                 <div id ="img">
-                    <img src = "/python-tarot/webapp/templates/1.png" id="button-img" type="button" class="button-img" onclick="img()">
+                    <img src = "https://www.img.in.th/images/f61fb0083da2e31853307ea80de1cbcb.png" id="button-img" type="button" class="button-img" onclick="img()">
                 </div>
                 
                 <div id ="gif" style="display:none;">
-                    <img src="/python-tarot/webapp/templates/2.gif" id="button-img" type="button" class="button-imag" onclick="genFortune()">
+                    <img src="https://www.img.in.th/images/25645e063e4a0958dd8e2e26de0a15c2.gif" type="button" class="button-imag" onclick="genFortune()">
                 </div>
             </div>   </div>
     <script type="text/javascript">
