--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="propeller" content="05f23dfc078c89815efd88115adcaf84">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>เซียมซี | SeamSee</title>
     <meta name="theme-color" content="#ffc107">
